step9 Calculate the R-squared value

--- a/Fisher's_Iris.ipynb
+++ b/Fisher's_Iris.ipynb
@@ -372,6 +372,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the R-squared value\n",
+    "\n",
+    "calculate the R-squared value for your line above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The R-squared value is 0.0938\n"
+     ]
+    }
+   ],
+   "source": [
+    "# again, use numpy.corrcoef function to get R-squared.\n",
+    "rsq = np.corrcoef(setosa_petal_length, setosa_petal_width)[0][1]**2\n",
+    "print(\"The R-squared value is %6.4f\" % rsq)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
